<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/risk_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/single_address_risk_details"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crime_risk_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crime_risk"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:layout_marginStart="5dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/crime_risk_checkBox"
        android:layout_marginTop="69dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="69dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crime_risk_score_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/risk_score"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:layout_marginStart="5dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/crime_risk_score_val"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/crime_risk_score_val"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:text=""
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:layout_marginStart="11dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/crime_risk_severity_header"
        app:layout_constraintRight_toRightOf="@+id/crime_risk_severity_val"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/crime_risk_header"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toRightOf="@+id/crime_risk_score_header" />

    <TextView
        android:id="@+id/crime_risk_severity_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/risk_severity"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:layout_marginStart="5dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/crime_risk_severity_val"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/crime_risk_checkBox"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/insure_shipment"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:buttonTint="@color/colorAccent"
        android:layout_marginStart="1dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="164dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weather_risk_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/weather_risk"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/crime_risk_checkBox"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/weather_risk_val"
        android:layout_width="346dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:text=""
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/weather_risk_header"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/crime_risk_severity_val"
        android:layout_width="136dp"
        android:layout_height="21dp"
        android:text=""
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="104dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/crime_risk_checkBox"
        app:layout_constraintRight_toRightOf="@+id/weather_risk_val"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/crime_risk_header"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="43dp"
        app:layout_constraintLeft_toLeftOf="@+id/crime_risk_severity_header" />



    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton"
        android:text="@string/button"
        android:textColor="@color/colorButtonText"
        android:textSize="18sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="134dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        android:layout_marginStart="4dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/express_shipment_radioButton"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:checked="false"
            android:text="@string/express_shipment"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:buttonTint="@color/colorAccent"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="397dp" />

        <RadioButton
            android:id="@+id/hold_shipment_radioButton"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold_shipment"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:buttonTint="@color/colorAccent"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="365dp" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
