<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"

    tools:context="com.pb.riskanalysisforsmb.MainActivity">


    <Button
        android:id="@+id/browse_file_btn_id"
        android:layout_width="257dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:text="@string/browse"
        android:textSize="18sp"
        tools:text="browse"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="131dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/browse_file_text_id"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_alignBottom="@+id/browse_file_btn_id"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/browse_file_btn_id"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="38dp"
        android:layout_toEndOf="@+id/submit_btn"
        android:ems="10"
        android:text="@string/select_address_file"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/browse_file_btn_id"
        app:layout_constraintLeft_toLeftOf="@+id/browse_file_btn_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/submit_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="62dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/browse_file_btn_id"
        android:width="200dp"
        android:text="@string/submit_btn"
        android:background="@drawable/mybutton"
        android:textColor="@color/colorButtonText"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/browse_file_btn_id"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/browse_file_btn_id"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/browse_file_btn_id" />



</android.support.constraint.ConstraintLayout>
